# NanoLager

./: .env  .gitignore  Cargo.toml  INFO.txt  LICENSE  README-pl.md  README.md  build.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: invoice.rs  mod.rs  vat_rate.rs
regions/de/: Cargo.toml
regions/de/src/: lib.rs
regions/fr/: Cargo.toml
regions/fr/src/: lib.rs
regions/pl/: Cargo.toml
regions/pl/src/: lib.rs
services/api-gateway/: Dockerfile
services/api_gateway/: Dockerfile
services/api_gateway/src/: main.rs
services/jpk/: Cargo.toml  Dockerfile
services/renderer/: Cargo.toml  Dockerfile
services/reporting/: Cargo.toml  Dockerfile
services/storage/: Cargo.toml  Dockerfile
services/storage/src/: main.rs  routes.rs
