[workspace]

members = [
    "common",
    "services/renderer",
    "services/api-gateway",
    "services/storage",
    "services/reporting",
    "services/jpk",
    "regions/pl",
    "regions/de",
    "regions/fr"
]

[workspace.dependencies]
axum = "0.8.3"
axum-server = "0.7.2"
printpdf = "0.8.2"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
